<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="app_name_detail">Detail Movie</string>
    <string name="app_name_search">Result Search Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_movie">poster movie</string>
    <string name="btn_detail">detail</string>
    <string name="btn_share">share</string>
    <string name="nav_header_title">Badik Irwan</string>
    <string name="nav_header_email">badikirwan@gmail.com</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="search">Search</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="appwidget_text">MOVIE BANNER</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="label_daily_reminder_on">Daily Reminder Notification is now activ</string>
    <string name="label_daily_reminder_off">Daily Reminder Notification is now not activ</string>
    <string name="label_upcoming_reminder_on">Upcoming Reminder Notification is now activ</string>
    <string name="label_upcoming_reminder_off">Upcoming Reminder Notification is now not activ</string>
    <string name="label_alarm">Good Morning! Catalogue Movie missing you</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="reminder_daily">reminder_daily</string>
    <string name="reminder_upcoming">reminder_upcoming</string>
    <string name="setting_locale">setting_locale</string>
</resources>
