<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">
        <ImageView
            android:id="@+id/img_movie_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/poster_movie"/>
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_toEndOf="@id/img_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="judul"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_toEndOf="@id/img_movie_poster"
            android:layout_below="@id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="deskripsi"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <TextView
            android:id="@+id/tv_movie_date"
            android:layout_toEndOf="@id/img_movie_poster"
            android:layout_below="@id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="release"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:layout_toEndOf="@id/img_movie_poster"
            android:layout_below="@id/tv_movie_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/activity_horizontal_margin">
            <Button
                android:id="@+id/btn_detail_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_detail"
                android:textSize="12sp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"/>
            <Button
                android:id="@+id/btn_share_movie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_share"
                android:textSize="12sp"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>